fix: 修复前端API URL配置，使用生产环境地址

--- a/src/web/example-website.html
+++ b/src/web/example-website.html
@@ -200,7 +200,7 @@
     <script>
         // 初始化聊天小部件
         const chatWidget = new ChatWidget({
-            apiUrl: 'http://localhost:5000'  // 修改为你的API地址
+            apiUrl: 'https://paperbagglue-chat.onrender.com'  // 生产环境API地址
         });
 
         // 5秒后自动隐藏提示
